--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
 	font-size: 14px;
 	color: white;
 }
+
 p {
 	line-height: 24px
 }
@@ -23,15 +24,18 @@ p {
     display: table;
 	clear: both;
 }
+
 .container {
 	width: 100%;
 	max-width: 1200px;
 	margin: 0 auto;
 	padding: 50px 10px;
 } 
+
 .row>div {
 	padding-right: 20px;	
 }
+
 h1 {
 	font-weight: 300;
 	font-size: 35px;
@@ -81,6 +85,24 @@ h1 {
 	font-size: 60px;	
 }
 
+/* Section start */
+
+.iphone {
+	position: relative;	
+}
+.iphone img {
+	height: 800px;
+	position: absolute;
+	bottom: -100%;
+	right: 10%;
+}
+.start h1, .details h1 {
+	color: #222626;
+}
+
+.start p, .details p {
+	color: #959595;
+}
 
 /* Grid */
 
