--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ h1 {
 }
 
 .gallery>.row>div h1,
-.shop h1 {
+.buying h1 {
 	font-size: 30px;
 }
 
@@ -191,6 +191,69 @@ h1 {
 
 .more-power>div h1 {
 	font-size: 60px;	
+}
+
+/* Section reasons */
+
+.reasons {
+	background-color: #82ca9c;		
+}
+
+/* Section buying */
+
+.buying {
+	background-color: #f6f7fa;		
+}
+.buying h1 {
+	color: #2e3b4e;	
+}
+.buying p {
+	color: #8297a7;	
+}
+.buying>.row>div {
+	padding: 30px;	
+}
+.buying button {
+	text-transform: uppercase;	
+	border-radius: 5px;
+	color: #fff;
+	font-weight: bold;
+	font-size: 11px;
+	padding: 10px 20px;
+	border: none;
+}
+.lavender {
+	background-color: #e1e1e1;	
+}
+.buying>.row>.col-6:hover {
+	background-color: #fff;
+	-webkit-box-shadow: 0px 0px 62px 0px rgba(0,0,0,0.45);
+	-moz-box-shadow: 0px 0px 62px 0px rgba(0,0,0,0.45);
+	box-shadow: 0px 0px 62px 0px rgba(0,0,0,0.25);
+}
+.buying>.row>.col-6:hover .lavender {
+	background-color: #bd8cbf; 
+}
+.buying>.row>.col-6:hover .fa-apple {
+	color: black; 
+}
+.buying>.row>.col-6:hover .fa-windows {
+	color: #00adef; 
+}
+.buy {
+	background-color: #82ca9c; 
+	font-size: 13px !important;
+	padding: 20px 30px !important;
+	transition: 0.3s;
+}
+.buy:hover,
+footer button:hover {
+	background-color: green;	
+}
+.buying .fa {
+	font-size: 24px;
+	color: #c5c5c5;
+	letter-spacing: 5px;
 }
 
 /* Grid */
