Add section footer & media querries

--- a/style.css
+++ b/style.css
@@ -204,15 +204,19 @@ h1 {
 .buying {
 	background-color: #f6f7fa;		
 }
+
 .buying h1 {
 	color: #2e3b4e;	
 }
+
 .buying p {
 	color: #8297a7;	
 }
+
 .buying>.row>div {
 	padding: 30px;	
 }
+
 .buying button {
 	text-transform: uppercase;	
 	border-radius: 5px;
@@ -222,30 +226,37 @@ h1 {
 	padding: 10px 20px;
 	border: none;
 }
+
 .lavender {
 	background-color: #e1e1e1;	
 }
+
 .buying>.row>.col-6:hover {
 	background-color: #fff;
 	-webkit-box-shadow: 0px 0px 62px 0px rgba(0,0,0,0.45);
 	-moz-box-shadow: 0px 0px 62px 0px rgba(0,0,0,0.45);
 	box-shadow: 0px 0px 62px 0px rgba(0,0,0,0.25);
 }
+
 .buying>.row>.col-6:hover .lavender {
 	background-color: #bd8cbf; 
 }
+
 .buying>.row>.col-6:hover .fa-apple {
 	color: black; 
 }
+
 .buying>.row>.col-6:hover .fa-windows {
 	color: #00adef; 
 }
+
 .buy {
-	background-color: #82ca9c; 
-	font-size: 13px !important;
-	padding: 20px 30px !important;
-	transition: 0.3s;
+  padding: 20px 30px !important;
+  font-size: 13px !important;
+  background-color: #82ca9c;
+	transition: 0.5s;
 }
+
 .buy:hover,
 footer button:hover {
 	background-color: green;	
@@ -256,11 +267,45 @@ footer button:hover {
 	letter-spacing: 5px;
 }
 
+/* Section footer */
+
+.footer {
+  font-size: 13px;
+  background-color: #192431;
+}
+
+.footer form button {
+  height: 50px;
+	font-size: 20px;
+  background-color: #82ca9c;
+	color: #fff;
+	border: none;
+	transition: 0.5s;
+}
+
+.footer form input {
+	height: 50px;
+	padding-left: 10px;
+}
+
+.footer>.row>div {
+	padding-right: 50px;	
+}
+
+.footer>.row>div:nth-child(2) p {
+	color: #57697f;	
+}
+
+.sign {
+  font-weight: bold;
+}
+
 /* Grid */
 
 [class*="col-"] {
 	float: left;
 }
+
 .col-1 {width: 8.33%;}
 .col-2 {width: 16.66%;}
 .col-3 {width: 25%;}
@@ -286,34 +331,83 @@ footer button:hover {
 .col-offset-10 {margin-left: 83.33%;}
 .col-offset-11 {margin-left: 91.66%;}
 
+/* Media querries */
 
 @media (max-width: 767px) {
 
-.col-s-1 {width: 8.33%;}
-.col-s-2 {width: 16.66%;}
-.col-s-3 {width: 25%;}
-.col-s-4 {width: 33.33%;}
-.col-s-5 {width: 41.66%;}
-.col-s-6 {width: 50%;}
-.col-s-7 {width: 58.33%;}
-.col-s-8 {width: 66.66%;}
-.col-s-9 {width: 75%;}
-.col-s-10 {width: 83.33%;}
-.col-s-11 {width: 91.66%;}
-.col-s-12 {width: 100%;}
+  .col-s-1 {width: 8.33%;}
+  .col-s-2 {width: 16.66%;}
+  .col-s-3 {width: 25%;}
+  .col-s-4 {width: 33.33%;}
+  .col-s-5 {width: 41.66%;}
+  .col-s-6 {width: 50%;}
+  .col-s-7 {width: 58.33%;}
+  .col-s-8 {width: 66.66%;}
+  .col-s-9 {width: 75%;}
+  .col-s-10 {width: 83.33%;}
+  .col-s-11 {width: 91.66%;}
+  .col-s-12 {width: 100%;}
+
+  p,
+  .footer h4 {
+    font-size: 16px !important;	
+  }
+
+  .container {
+    padding: 30px 10px;
+  }
+
+  .row>div {
+    padding-right: 0px;	
+  }
+
+  .iphone img {
+    height: 300px;
+    right: -5%;
+    bottom: 0;
+  }
+
+  .claim h1, .more-power>div h1 {
+    font-size: 40px;	
+  }
+
+  .start h1, .gallery>.row>div h1 {
+    font-size: 20px;	
+  }
+
+  .footer>.row>div {
+    padding-right: 0px;	
+  }
 }
 
 @media (min-width: 768px) and (max-width: 1023px) {
-.col-m-1 {width: 8.33%;}
-.col-m-2 {width: 16.66%;}
-.col-m-3 {width: 25%;}
-.col-m-4 {width: 33.33%;}
-.col-m-5 {width: 41.66%;}
-.col-m-6 {width: 50%;}
-.col-m-7 {width: 58.33%;}
-.col-m-8 {width: 66.66%;}
-.col-m-9 {width: 75%;}
-.col-m-10 {width: 83.33%;}
-.col-m-11 {width: 91.66%;}
-.col-m-12 {width: 100%;}
+  
+  .col-m-1 {width: 8.33%;}
+  .col-m-2 {width: 16.66%;}
+  .col-m-3 {width: 25%;}
+  .col-m-4 {width: 33.33%;}
+  .col-m-5 {width: 41.66%;}
+  .col-m-6 {width: 50%;}
+  .col-m-7 {width: 58.33%;}
+  .col-m-8 {width: 66.66%;}
+  .col-m-9 {width: 75%;}
+  .col-m-10 {width: 83.33%;}
+  .col-m-11 {width: 91.66%;}
+  .col-m-12 {width: 100%;}
+
+  .iphone img {
+  height: 400px;
+  right: 5%;
+  bottom: 0;
+  }
+}
+
+@media (min-width: 1024px) and (max-width: 1200px) {
+
+  .iphone img {
+		height: 600px;;
+	}
+	.gallery>.row>div h1 {
+		font-size: 25px;	
+	}
 }
